# restaurants_review

./: .gitignore  .python-version  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
restaurants/: tests.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
reviews/: models.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
